# FLX-FLUXER-SELFBOT

./: .env.example  .gitignore  README.md  appveyor.yml  azure-pipelines.yml  gui.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: fluxer-release-notify.yml  pages.yml  release.yml  windows-release.yml
app/: __init__.py  __main__.py
assets/: icon.icns
docs/: CHROMEBOOK.md  FLXSCRIPT_GUIDE.md  RELEASE.md  github-release-workflow.yml  index.html
docs/invite/: index.html
docs/static/: app.css  app.js  demo-data.js
flx/: __init__.py  __main__.py  abuse_settings.py  assistant.py  command_catalog.py  commands.py  community_hub.py  config.py  dadjoke.py  danger_cmds.py  fluxerscript.py  gateway.py  glcheck.py  httpcat.py  ios_app.py  message_attachments.py  microlink.py  ollama_runtime.py  osint.py  parse_util.py  paths.py  pokemon.py  poof.py  qr.py  randomword.py  rate_limit.py  rest.py  runtime.py  script_hub.py  snowflake.py  ssl_certs.py  state.py  targets.py  textutil.py  troll.py  user_info.py  utility_cmds.py  version.py  weather.py  webhook_cmd.py  (+1 more)
flx/gui/: bootstrap.py  commands_list.py  native_window.py  server.py
flx/gui/static/: app.css  app.js  index.html
pages/: index.html  landing.css
scripts/: build_android.sh  build_ios.sh  build_linux.sh  build_mac.sh  build_pages.sh  build_windows.bat  export_ipa.sh  fetch_ollama_mac.sh  make_mac_dmg.sh  notify_fluxer_release.py  prepare_icons.py  publish_mobile_release.sh  publish_windows_release.sh  run_chromebook.sh
scripts/community/: check.py  echo.py
scripts/hub/: echo.py  httpcat.py  manifest.json  pokemon.py
scripts/ollama/: README.md
src/: config.ts  index.ts
src/commands/: index.ts
